--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,11 +34,13 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    #ff9100,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  nigger:     rgb(83, 44, 0),
+  btnColor:   #c20000
 );
 
 
