--- a/src/pages/actionsheet/actionsheet.scss
+++ b/src/pages/actionsheet/actionsheet.scss
@@ -1,3 +1,6 @@
 page-01-actionsheet {
-
+    .actionsheetTest {
+        color: colors($colors, secondary);
+        background-color: colors($colors, secondary);
+    }
 }
