playing with cards

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -40,7 +40,8 @@ $colors: (
   light:      #f4f4f4,
   dark:       #222,
   nigger:     rgb(83, 44, 0),
-  btnColor:   #c20000
+  btnColor:   #c20000,
+  myGrey:     #d8d8d8
 );
 
 
