simple chips + links for col-and-config + content

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -41,7 +41,8 @@ $colors: (
   dark:       #222,
   nigger:     rgb(83, 44, 0),
   btnColor:   #c20000,
-  myGrey:     #d8d8d8
+  myGrey:     #d8d8d8,
+  myLila:         #49005f,
 );
 
 
