--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,16 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+.myToast {
+    .toast-wrapper {
+      background: color($colors, secondary);
+      opacity: 0.9;
+      // border-radius: 5px;
+      text-align: center;
+    }
+
+    .toast-message {
+      font-size: 2.0rem;
+      color: color($colors, dark);
+    }
+}
