--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,7 +14,7 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
-.myToast {
+.erfolgreichToast {
     .toast-wrapper {
       background: color($colors, secondary);
       opacity: 0.9;
