amazing errorHandler + display message in toast

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -42,7 +42,8 @@ $colors: (
   nigger:     rgb(83, 44, 0),
   btnColor:   #c20000,
   myGrey:     #d8d8d8,
-  myLila:         #49005f,
+  myLila:     #49005f,
+  hell:       #ffffff
 );
 
 
