--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -27,3 +27,16 @@
       color: color($colors, dark);
     }
 }
+
+.fehlerToast {
+  .toast-wrapper {
+    background: color($colors, danger);
+    opacity: 0.9;
+    text-align: center;
+  }
+
+  .toast-message {
+    font-size: 2.0rem;
+    color: color($colors, hell);
+  }
+}
