finally implemented alert + error message when backend is not available

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -40,3 +40,16 @@
     color: color($colors, hell);
   }
 }
+
+.warnungToast {
+  .toast-wrapper {
+    background: color($colors, primary);
+    opacity: 0.9;
+    text-align: center;
+  }
+
+  .toast-message {
+    font-size: 2.0rem;
+    color: color($colors, hell);
+  }
+}
