--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -53,3 +53,16 @@
     color: color($colors, hell);
   }
 }
+
+.infoToast {
+    .toast-wrapper {
+      background: color($colors, info);
+      opacity: 0.9;
+      text-align: center;
+    }
+  
+    .toast-message {
+      font-size: 2.0rem;
+      color: color($colors, dark);
+    }
+}
