--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -43,7 +43,8 @@ $colors: (
   btnColor:   #c20000,
   myGrey:     #d8d8d8,
   myLila:     #49005f,
-  hell:       #ffffff
+  hell:       #ffffff,
+  info:       #00aeff,
 );
 
 
