--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,13 +38,14 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222,
+  dark:       rgb(77, 77, 77),
   nigger:     rgb(83, 44, 0),
   btnColor:   #c20000,
   myGrey:     #d8d8d8,
   myLila:     #49005f,
   hell:       #ffffff,
   info:       #00aeff,
+  text-grey:  #636363,
 );
 
 
