--- a/src/pages/person/person.scss
+++ b/src/pages/person/person.scss
@@ -2,4 +2,21 @@ page-person {
     ion-icon {
         font-size: 200%;
     }
+
+    .hidden-button{
+        height: 100%;
+        width: 100%;
+        box-shadow: none;
+        -webkit-box-shadow: none;
+        background: none;
+    }
+
+    .noBackground {
+        background: none;
+        color: none;
+    }
+
+    .deleteIcon {
+        font-size: 500%;
+    }
 }
